# todolist_2

./: .dockerignore  .env  .env.prod  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yaml
core/: admin.py
core/migrations/: 0001_initial.py
todolist/: settings.py
