[tool.poetry]
name = "todolist-2"
version = "0.1.0"
description = ""
authors = ["stas23111 <stas-lomaev@mail.ru>"]
readme = "README.md"
packages = [{include = "todolist_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
